[gd_scene load_steps=12 format=3 uid="uid://b7tcdtotqdmai"]

[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="1_85b00"]
[ext_resource type="Shader" path="res://shaders/pause_menu.gdshader" id="2_vcyx1"]
[ext_resource type="FontFile" uid="uid://i2wscuyqlt4s" path="res://assets/Effects/Fire/BigBlueTerm437NerdFont-Regular.ttf" id="3_82gem"]
[ext_resource type="Texture2D" uid="uid://djbp4vd1byr6b" path="res://assets/UI/Buttons/Button_Blue_3Slides.png" id="4_d6koe"]
[ext_resource type="Texture2D" uid="uid://dw2cwkdrfr4n4" path="res://assets/UI/Buttons/Button_Blue_3Slides_Pressed.png" id="5_w8t8g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iw0nw"]
shader = ExtResource("2_vcyx1")
shader_parameter/amount = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_rh0h3"]
font = ExtResource("3_82gem")
font_size = 48
font_color = Color(1, 0.988235, 0.905882, 1)
outline_size = 10
outline_color = Color(0.0862745, 0.109804, 0.180392, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sspep"]
font = ExtResource("3_82gem")
font_size = 24
font_color = Color(1, 0.988235, 0.905882, 1)
outline_size = 8
outline_color = Color(0.0862745, 0.109804, 0.180392, 1)

[sub_resource type="Animation" id="Animation_t1miy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BgColor:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hpptg"]
resource_name = "blur"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BgColor:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.243137, 0.0470588, 0.0313726, 0), Color(0.242424, 0.0462609, 0.0314349, 0.490196)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r5byg"]
_data = {
"RESET": SubResource("Animation_t1miy"),
"blur": SubResource("Animation_hpptg")
}

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_85b00")

[node name="BgColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.795606, 0.5, 0.52321, 1)
material = SubResource("ShaderMaterial_iw0nw")
layout_mode = 0
offset_right = 1206.0
offset_bottom = 675.0
color = Color(0.130014, 0.108216, 0.128932, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.0
offset_top = -169.0
offset_right = 263.0
offset_bottom = 169.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over!"
label_settings = SubResource("LabelSettings_rh0h3")
horizontal_alignment = 1

[node name="MainMenuButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_d6koe")
texture_pressed = ExtResource("5_w8t8g")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MainMenuButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -17.0
offset_right = 48.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"
label_settings = SubResource("LabelSettings_sspep")

[node name="QuitButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_d6koe")
texture_pressed = ExtResource("5_w8t8g")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -17.0
offset_right = 48.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"
label_settings = SubResource("LabelSettings_sspep")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r5byg")
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
